fact zone added and another category set added, also a fix to the footer to improve spacing

--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,6 @@ html {
 }
 
 
-
 /* header */
 
 .banner {
@@ -128,6 +127,7 @@ footer, h3, a {
 
 footer h3 {
     text-decoration: underline;
+    margin-top: 15px;
 }
 
 footer a {
@@ -312,9 +312,9 @@ footer a {
 
 .social-media-sec {
     text-align: center;
-    /* border: 2px solid black; */
-    width: 50vw;
+    border: 2px solid #B46325;   
     margin: 10px auto;
+    padding: 12.5px;
 }
 
 .social-media-sec h6 {
@@ -332,5 +332,33 @@ footer a {
 
 /* fact zone */
 
+.factbox {
+    background-color: #B46325;
+    color: #fff;
+    padding: 12.5px;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.factbox h6 {
+    font-size: 1.25em;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.factbox button {
+    all: unset;
+    background-color: #F2B613;
+    padding: 10px 7.5px;
+    color: #000;
+    border-radius: 4.5px;
+}
+
+.factbox button:hover {
+    cursor: pointer;
+}
 
 
